Final Commit Part 1
