# controllers/laptops.js
@@ -1,7 +1,7 @@
 const mongodb = require('../data/database');
 const ObjectId = require('mongodb').ObjectId;
 const {laptopSchema} = require('../helpers/validation_schema');
-const createError = require('http-errors')
+const createError = require('http-errors');
 
 const getAll = async (req, res) => {
     //#swagger.tags=['Laptops']
@@ -12,19 +12,29 @@ const getAll = async (req, res) => {
     });
 };
 
-const getSingle = async (req, res, next) => {
+const getSingle = async (req, res) => {
     //#swagger.tags=['Laptops']
-    const laptopId = new ObjectId(req.params.id)
-    const result = await mongodb.getDatabase().db().collection('laptops').find({_id: laptopId});
+    try{
+        const laptopId = new ObjectId(req.params.id)
+        const result = await mongodb.getDatabase().db().collection('laptops').find({_id: laptopId});
 
-    if (!result){
-      throw createError(404, "Laptop does not exist")
+        result.toArray().then((laptops) => {
+            res.setHeader('Content-Type', 'application/json');      
+            try {
+                if(laptops[0] == undefined){
+                    throw createError(404, 'This laptop does not exist')
+                }
+                res.json(laptops[0])  
+            }
+            catch (error) {
+                res.status(404).send(error)
+            }
+        });
+    }
+    catch (error) {
+        res.status(400).send(createError(400, 'Invalid Laptop id'))
     }
     
-    result.toArray().then((laptops) => {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(laptops[0])
-    });
 };
 
 const createLaptop = async (req,res) => {
@@ -36,52 +46,74 @@ const createLaptop = async (req,res) => {
         display: req.body.display,
         graphicsCard: req.body.graphicsCard,
     }
-
-    const result = await laptopSchema.validateAsync(laptop);
-    console.log(result);
-    
-    const response = await mongodb.getDatabase().db().collection('laptops').insertOne(laptop);
-    if (response.acknowledged) {
-        res.status(204).send();
+ 
+    try {
+        const result = await laptopSchema.validateAsync(laptop);   
+        const response = await mongodb.getDatabase().db().collection('laptops').insertOne(laptop);
+        if (response.acknowledged) {
+            res.status(204).send();
+        }
     }
-    else{
-        res.status(500).json(response.error || 'Some error occured while creating the laptop.');
+    catch (error) {
+        if (error.name === 'ValidationError'){
+            res.status(422).send(createError(422, error.message))
+            return
+        }
+        res.status(404).send(error)
     }
 }
 
 const updateLaptop = async (req,res) => {
     //#swagger.tags=['Laptops']
-    const laptopId = new ObjectId(req.params.id)
-    const laptop = {
-        manufacturer: req.body.manufacturer,
-        model: req.body.model,
-        price: req.body.price,
-        display: req.body.display,
-        graphicsCard: req.body.graphicsCard,
+    try{
+        const laptopId = new ObjectId(req.params.id)
+        const laptop = {
+            manufacturer: req.body.manufacturer,
+            model: req.body.model,
+            price: req.body.price,
+            display: req.body.display,
+            graphicsCard: req.body.graphicsCard,
+        }
+        try {
+            const result = await laptopSchema.validateAsync(laptop);   
+            const response = await mongodb.getDatabase().db().collection('laptops').replaceOne({ _id: laptopId }, laptop);
+            if (response.modifiedCount > 0) {
+                res.status(204).send();
+            }
+        }
+        catch (error) {
+            if (error.name === 'ValidationError'){
+                res.status(422).send(createError(422, error.message))
+                return
+            }
+            res.status(404).send(createError(404, 'The laptop you are trying to update does not exist'))
+        };
     }
-
-    const result = await laptopSchema.validateAsync(laptop);
-    console.log(result);
-
-    const response = await mongodb.getDatabase().db().collection('laptops').replaceOne({ _id: laptopId }, laptop);
-    if (response.modifiedCount > 0) {
-        res.status(204).send();
-    }
-    else{
-        res.status(500).json(response.error || 'Some error occured while updating the laptop.');
-    }
+    catch (error) {
+        res.status(400).send(createError(400, 'Invalid Laptop id'))
+    }    
 }
 
 const deleteLaptop = async (req,res) => {
     //#swagger.tags=['Laptops']
-    const laptopId = new ObjectId(req.params.id)
-    const response = await mongodb.getDatabase().db().collection('laptops').deleteOne({ _id:laptopId });
-    if (response.deletedCount > 0) {
-        res.status(204).send();
+    try{
+        const laptopId = new ObjectId(req.params.id)
+        const response = await mongodb.getDatabase().db().collection('laptops').deleteOne({ _id:laptopId });
+        try {
+        if (response.deletedCount > 0) {
+            res.status(204).send();
+        }
+        else{
+            throw createError(404, 'The laptop that you are trying to delete does not exist')
+        }
     }
-    else{
-        res.status(500).json(response.error || 'Some error occured while deleting the laptop.');
+    catch (error) {
+        res.status(404).send(error)
     }
+    }
+    catch (error) {
+        res.status(400).send(createError(400, 'Invalid Laptop id'))
+    }    
 }
 
 module.exports = {
