# routes/index.js
@@ -4,7 +4,7 @@ const router = express.Router();
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
-    //#swagger.tags=['Wecome']
+    //#swagger.tags=['Welcome']
     res.send('Welcome to my gaming laptop and dream car wishlists :)');
 })
 router.use('/vehicles', require('./vehicles'));
