# swagger.json
@@ -1,20 +1,20 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Laptops & Vehicles API",
-    "description": "Databases containing items from my gaming laptop and vehicle wishlist :)",
+    "title": "Vehicles & Laptops API",
+    "description": "API containing my vehicle and laptop wishlist :)",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/": {
       "get": {
         "tags": [
-          "Wecome"
+          "Welcome"
         ],
         "description": "",
         "responses": {
@@ -51,19 +51,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "manufacturer": {
                   "example": "any"
                 },
-                "lastName": {
+                "model": {
                   "example": "any"
                 },
-                "email": {
+                "modelYear": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "color": {
                   "example": "any"
                 },
-                "birthday": {
+                "price": {
                   "example": "any"
                 }
               }
@@ -74,8 +74,11 @@
           "204": {
             "description": "No Content"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           }
         }
       }
@@ -100,6 +103,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
@@ -121,19 +130,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "manufacturer": {
                   "example": "any"
                 },
-                "lastName": {
+                "model": {
                   "example": "any"
                 },
-                "email": {
+                "modelYear": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "color": {
                   "example": "any"
                 },
-                "birthday": {
+                "price": {
                   "example": "any"
                 }
               }
@@ -144,8 +153,14 @@
           "204": {
             "description": "No Content"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           }
         }
       },
@@ -166,8 +181,11 @@
           "204": {
             "description": "No Content"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
@@ -199,19 +217,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "manufacturer": {
                   "example": "any"
                 },
-                "lastName": {
+                "model": {
                   "example": "any"
                 },
-                "email": {
+                "price": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "display": {
                   "example": "any"
                 },
-                "birthday": {
+                "graphicsCard": {
                   "example": "any"
                 }
               }
@@ -222,8 +240,11 @@
           "204": {
             "description": "No Content"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           }
         }
       }
@@ -248,6 +269,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
@@ -269,19 +296,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "manufacturer": {
                   "example": "any"
                 },
-                "lastName": {
+                "model": {
                   "example": "any"
                 },
-                "email": {
+                "price": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "display": {
                   "example": "any"
                 },
-                "birthday": {
+                "graphicsCard": {
                   "example": "any"
                 }
               }
@@ -292,8 +319,14 @@
           "204": {
             "description": "No Content"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           }
         }
       },
@@ -314,8 +347,11 @@
           "204": {
             "description": "No Content"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
